--- a/src/assets/scss/ficus-docs.scss
+++ b/src/assets/scss/ficus-docs.scss
@@ -8,4 +8,6 @@
 @import '../../scss/settings';
 
 // Documentation components
+@import 'layout';
 @import 'direct-link';
+@import 'table-of-contents'
