feat: update styles

--- a/src/assets/scss/_doc-layout.scss
+++ b/src/assets/scss/_doc-layout.scss
@@ -1,11 +1,5 @@
 // Layout
-
-.fd-layout {
-
-}
-
-// Layout
-.fd-layout {
+.fd-doc-layout {
   max-width: 1250px;
   width: 100%;
   padding: var(--spacer-xxl);
