--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -7,8 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
   <!-- component css START -->
   {% set css %}
-  {% include "../components/css/content.css" %}
-  {% include "../components/css/navigation.css" %}
+    {% include "../components/css/content.css" %}
+    {% include "../components/css/navigation.css" %}
   {% endset %}
   <style>
     {{css | safe}}
@@ -18,7 +18,7 @@
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
-  <main class="[ fd-layout ] [ fu-p-xxl fu-flow ]">
+  <main class="[ fd-doc-layout ] [ fu-p-xxl fu-flow ]">
     {# {% if eleventyNavigation and eleventyNavigation.key and eleventyNavigation.parent %}
     <nav class="breadcrumb" aria-labelledby="breadcrumb">
       <h2 class="sr-only" id="breadcrumb">Breadcrumbs: </h2>
