--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -15,23 +15,21 @@
     <meta name="theme-color" content="#54e4e5">
     <!-- component css START -->
     {% set css %}
-    {% include "../css/ficus-globals.css" %}
-    {% include "../css/ficus-utilities.css" %}
-    {% include "../components/css/main-layout.css" %}
-    {% include "../components/css/header.css" %}
-    {% include "../components/css/sidebar.css" %}
-    {% include "../components/css/navigation.css" %}
-    {% include "../components/css/button.css" %}
-    {# {% include "../components/docs/css/toc.css" %} #}
+      {% include "../css/ficus-globals.css" %}
+      {% include "../css/ficus-utilities.css" %}
+      {% include "../css/ficus-docs.css" %}
+      {% include "../components/css/header.css" %}
+      {% include "../components/css/navigation.css" %}
+      {% include "../components/css/button.css" %}
     {% endset %}
     <style>
       {{css | safe}}
     </style>
     <!-- component css END -->
   </head>
-  <body>
+  <body style="overflow: hidden;">
 
-    <div class="fl-grid-wrapper">
+    <div class="fd-main-layout">
       <header class="fc-header">
         <section class="fc-header__section">
           <img src="../assets/img/logo.png" width="150" alt="FicusJS Components">
@@ -46,7 +44,7 @@
         <iframe src="components/html/button" frameborder="0" name="comp-frame"></iframe>
       </main>
 
-      <div class="[ fc-sidebar ] [ fu-pt-xl fu-pb-xl ]">
+      <div class="[ fd-sidebar ] [ fu-pt-xxl fu-pb-xxl ]">
         <h2 class="fu-text-sm fu-text-transform-uppercase fu-mb-sm fu-ml-xl fu-mr-xl">Custom elements</h2>
         <nav class="[ fc-nav ] [ fu-mb-xl fu-ml-lg fu-mr-lg ]">
           <ul class="fc-nav__list">
