--- a/src/assets/scss/_doc-layout.scss
+++ b/src/assets/scss/_doc-layout.scss
@@ -2,32 +2,38 @@
 .fd-doc-layout {
   max-width: 1250px;
   width: 100%;
-  padding: var(--spacer-xxl);
   margin: 0 auto;
   display: grid;
   grid-template-columns: minmax(0px, 960px) 220px;
   grid-template-areas: "breadcrumb sticky-aside" "article sticky-aside";
-  column-gap: var(--spacer-xl);
+  column-gap: var(--spacer-xxl);
   grid-auto-rows: min-content;
 
   // content flow
   --flow-space: var(--spacer-md);
 
   h1:not(:first-of-type) {
-    --flow-space: var(--spacer-xxl);
+    --flow-space: var(--spacer-xxxl);
   }
 
   h2 {
-    --flow-space: var(--spacer-xl);
+    --flow-space: var(--spacer-xxl);
   }
 
   h3 {
+    --flow-space: var(--spacer-xl);
+  }
+
+  h4 {
     --flow-space: var(--spacer-lg);
   }
 
-  h4,
   h5,
   h6 {
     --flow-space: var(--spacer-md);
+  }
+
+  & > :not(pre):not(table) {
+    max-width: 42rem;
   }
 }
