--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -40,7 +40,7 @@ body {
   background: var(--body-bg);
   color: var(--body-color);
   font-size: var(--text-md);
-  font-family: var(--font-primary);
+  font-family: var(--font-secondary);
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
