--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -37,7 +37,7 @@ html {
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  background: var(--body-bg);
+  background: var(--body-bg-color);
   color: var(--body-color);
   font-size: var(--text-md);
   font-family: var(--font-secondary);
