--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-{# <html lang="en" data-theme="dark"> #}
-<html lang="en">
+<html lang="en" data-theme="dark">
+{# <html lang="en"> #}
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/android-chrome-384x384.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <script type="module" src="../assets/js/theme.js"></script> 
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#54e4e5">
     <!-- component css START -->
@@ -38,6 +39,8 @@
         <section class="fc-header__section">
           <a href="..." class="fc-button fc-button--link">Docs</a>
           <a href="..." class="fc-button fc-button--link">GitHub</a>
+          <button id="dark-theme-toggle" class="fc-button fc-button--link">Dark</button>
+          <button id="light-theme-toggle" class="fc-button fc-button--link">Light</button>
         </section>
       </header>
 
@@ -68,6 +71,6 @@
         </nav>
       </div>
     </div>
-
   </body>
+  
 </html>
