--- a/src/components/css/dropdown.css
+++ b/src/components/css/dropdown.css
@@ -12,14 +12,15 @@
   padding: .5rem 0;
   margin: .125rem 0 0;
   font-size: 1rem;
-  color: #212529;
   text-align: left;
   list-style: none;
-  background-color: #fff;
+  background-color: var(--fc-dropdown-menu-color-bg, var(--surface-bg-elevation-3));
   background-clip: padding-box;
-  border: 1px solid rgba(0,0,0,.15);
+  border: 1px solid var(--fc-dropdown-menu-color-border, var(--surface-border-color));
   border-radius: .25rem;
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2),0 8px 10px 1px rgba(0,0,0,.14),0 3px 14px 2px rgba(0,0,0,.12);
 }
+
 
 .fc-dropdown__menu--open {
   display: block;
@@ -31,9 +32,9 @@
   padding: .25rem 1.5rem;
   clear: both;
   font-weight: 400;
-  color: #212529;
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
   border: 0;
+  color: var(--surface-color)
 }
