fix: dark theme toggle

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -45,7 +45,7 @@
       </header>
 
       <main class="fc-frame">
-        <iframe src="components/html/button" frameborder="0" name="comp-frame"></iframe>
+        <iframe id="comp-frame" src="components/html/button" frameborder="0" name="comp-frame"></iframe>
       </main>
 
       <div class="[ fd-sidebar ] [ fu-pt-xxl fu-pb-xxl ]">
