--- a/src/_includes/doc.njk
+++ b/src/_includes/doc.njk
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
-{# <html lang="en"> #}
+{# <html lang="en" data-theme="dark"> #}
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
