--- a/src/components/css/input.css
+++ b/src/components/css/input.css
@@ -62,7 +62,7 @@
   font-size: 80%;
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
-  input[type='checkbox'], input[type='radio'] {
+  .fc-form__check {
     --active: #275efe;
     --active-inner: #fff;
     --focus: 2px rgba(39, 94, 254, .3);
@@ -84,7 +84,7 @@
     background: var(--b, var(--background));
     transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
   }
-  input[type='checkbox']:after, input[type='radio']:after {
+  .fc-form__check:after {
     content: '';
     display: block;
     left: 0;
@@ -92,41 +92,41 @@
     position: absolute;
     transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
   }
-  input[type='checkbox']:checked, input[type='radio']:checked {
+  .fc-form__check:checked {
     --b: var(--active);
     --bc: var(--active);
     --d-o: 0.3s;
     --d-t: 0.6s;
     --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
   }
-  input[type='checkbox']:disabled, input[type='radio']:disabled {
+  .fc-form__check:disabled {
     --b: var(--disabled);
     cursor: not-allowed;
     opacity: 0.9;
   }
-  input[type='checkbox']:disabled:checked, input[type='radio']:disabled:checked {
+  .fc-form__check:disabled:checked {
     --b: var(--disabled-inner);
     --bc: var(--border);
   }
-  input[type='checkbox']:disabled + label, input[type='radio']:disabled + label {
+  .fc-form__check:disabled + label {
     cursor: not-allowed;
   }
-  input[type='checkbox']:hover:not(:checked):not(:disabled), input[type='radio']:hover:not(:checked):not(:disabled) {
+  .fc-form__check:hover:not(:checked):not(:disabled) {
     --bc: var(--border-hover);
   }
-  input[type='checkbox']:focus, input[type='radio']:focus {
+  .fc-form__check:focus {
     box-shadow: 0 0 0 var(--focus);
   }
-  input[type='checkbox']:not(.switch), input[type='radio']:not(.switch) {
+  .fc-form__check:not(.fc-form__switch) {
     width: 21px;
   }
-  input[type='checkbox']:not(.switch):after, input[type='radio']:not(.switch):after {
+  .fc-form__check:not(.fc-form__switch):after {
     opacity: var(--o, 0);
   }
-  input[type='checkbox']:not(.switch):checked, input[type='radio']:not(.switch):checked {
+  .fc-form__check:not(.fc-form__switch):checked {
     --o: 1;
   }
-  input[type='checkbox'] + label, input[type='radio'] + label {
+  .fc-form__check + label {
     font-size: 14px;
     line-height: 21px;
     display: inline-block;
@@ -134,10 +134,10 @@
     cursor: pointer;
     margin-left: 4px;
   }
-  input[type='checkbox']:not(.switch) {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch) {
     border-radius: 7px;
   }
-  input[type='checkbox']:not(.switch):after {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch):after {
     width: 5px;
     height: 9px;
     border: 2px solid var(--active-inner);
@@ -147,14 +147,14 @@
     top: 4px;
     transform: rotate(var(--r, 20deg));
   }
-  input[type='checkbox']:not(.switch):checked {
+  input[type='checkbox'].fc-form__check:not(.fc-form__switch):checked {
     --r: 43deg;
   }
-  input[type='checkbox'].switch {
+  input[type='checkbox'].fc-form__switch {
     width: 38px;
     border-radius: 11px;
   }
-  input[type='checkbox'].switch:after {
+  input[type='checkbox'].fc-form__switch:after {
     left: 2px;
     top: 2px;
     border-radius: 50%;
@@ -163,17 +163,17 @@
     background: var(--ab, var(--border));
     transform: translateX(var(--x, 0));
   }
-  input[type='checkbox'].switch:checked {
+  input[type='checkbox'].fc-form__switch:checked {
     --ab: var(--active-inner);
     --x: 17px;
   }
-  input[type='checkbox'].switch:disabled:not(:checked):after {
+  input[type='checkbox'].fc-form__switch:disabled:not(:checked):after {
     opacity: 0.6;
   }
-  input[type='radio'] {
+  input[type='radio'].fc-form__check {
     border-radius: 50%;
   }
-  input[type='radio']:after {
+  input[type='radio'].fc-form__check:after {
     width: 19px;
     height: 19px;
     border-radius: 50%;
@@ -181,7 +181,7 @@
     opacity: 0;
     transform: scale(var(--s, 0.7));
   }
-  input[type='radio']:checked {
+  input[type='radio'].fc-form__check:checked {
     --s: 0.5;
   }
 }
