--- a/src/assets/scss/ficus-docs.scss
+++ b/src/assets/scss/ficus-docs.scss
@@ -12,4 +12,5 @@
 @import 'doc-layout';
 @import 'sidebar';
 @import 'direct-link';
-@import 'table-of-contents'
+@import 'table-of-contents';
+@import 'component-container'
