--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,35 +1,35 @@
 h1,
 .fu-text-xxxl {
   font-family: var(--font-primary);
-  font-size: var(--text-xxxxl);
+  font-size: var(--text-xxxl);
   line-height: var(--heading-line-height);
 }
 
 h2,
 .fu-text-xxl {
   font-family: var(--font-primary);
-  font-size: var(--text-xxxl);
+  font-size: var(--text-xxl);
   line-height: var(--heading-line-height);
 }
 
 h3,
 .fu-text-xl {
   font-family: var(--font-primary);
-  font-size: var(--text-xxl);
+  font-size: var(--text-xl);
   line-height: var(--heading-line-height);
 }
 
 h4,
 .fu-text-lg {
   font-family: var(--font-primary);
-  font-size: var(--text-xl);
+  font-size: var(--text-lg);
   line-height: var(--heading-line-height);
 }
 
 h5,
 .fu-text-md {
   font-family: var(--font-primary);
-  font-size: var(--text-lg);
+  font-size: var(--text-md);
   line-height: var(--heading-line-height);
 }
 
