feat: add hr tag reset styles

--- a/src/assets/scss/_doc-layout.scss
+++ b/src/assets/scss/_doc-layout.scss
@@ -38,7 +38,11 @@
     --flow-space: var(--spacer-md);
   }
 
-  & > :not(pre):not(table):not(.fd-component-container) {
+  hr {
+    --flow-space: var(--spacer-xxl);
+  }
+
+  & > :not(pre):not(table):not(.fd-component-container):not(hr) {
     max-width: 42rem;
   }
 }
