--- a/src/components/css/input.css
+++ b/src/components/css/input.css
@@ -1,14 +1,3 @@
-.fc-form__group {
-  margin-bottom: var(--form-spacer);
-}
-.fc-form__group.fc-form__group--rc {
-  margin-bottom: calc(var(--form-spacer) / 2);
-}
-.fc-form__group.fc-form__group--inline {
-  display: inline-block;
-  margin-right: calc(var(--form-spacer) / 2);
-  margin-bottom: calc(var(--form-spacer) / 2);
-}
 .fc-form__input {
   display: flex;
   flex-direction: column;
@@ -32,7 +21,7 @@
   box-shadow: var(--form-input-box-shadow-offsets) var(--focus-input-box-shadow-color, var(--form-primary-shadow-color));
 }
 .fc-form__control.ms-is-touched:invalid {
-  border-color: rgb(var(--form-invalid-color-rgb));
+  border-color: var(--form-invalid-color-rgb);
   background-color: var(--form-invalid-bg-color);
   border-width: var(--form-input-focus-border-width);
   padding: var(--form-input-focus-padding);
@@ -44,10 +33,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--white);
+  color: var(--form-submit-color);
   user-select: none;
-  background-color: var(--primary);
-  border: 1px solid var(--form);
+  background-color: var(--form-submit-bg-color);
+  border: 1px solid var(--form-submit-border-color);
   padding: var(--form-input-padding);
   width: auto;
   transition: background-color .15s ease-in-out, border-color .15s ease-in-out
@@ -56,10 +45,12 @@
   background-color: #16336a;
   border-color: #142e60;
 }
-.fc-form__invalid-feedback {
-  margin-top: calc(var(--form-spacer) / 4);
-  color: var(--red);
-  font-size: 80%;
+fc-input[type="submit"] fc-label,
+fc-input[type="submit"] fc-help-text {
+  display: none;
+}
+fc-input[type="submit"] .fc-form__group {
+  margin: 0;
 }
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
   .fc-form__check {
