--- a/src/components/css/sheet.css
+++ b/src/components/css/sheet.css
@@ -1,3 +1,360 @@
 .fc-sheet {
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+  margin: 0;
+  z-index: 3002
+}
 
+.fc-sheet.fc-sheet--in-view.fc-sheet--left--right__shadow,
+.fc-sheet.fc-sheet--in-view.fc-sheet--top--bottom__shadow {
+  -webkit-box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)
+}
+
+.fc-sheet--primary {
+  color: #fff;
+  background-color: #1d428a
+}
+
+.fc-sheet--primary a {
+  color: #fff
+}
+
+.fc-sheet--secondary {
+  color: #fff;
+  background-color: #414141
+}
+
+.fc-sheet--secondary a {
+  color: #fff
+}
+
+.fc-sheet--success {
+  color: #fff;
+  background-color: #00823b
+}
+
+.fc-sheet--success a {
+  color: #fff
+}
+
+.fc-sheet--info {
+  color: #fff;
+  background-color: #007377
+}
+
+.fc-sheet--info a {
+  color: #fff
+}
+
+.fc-sheet--warning {
+  color: #171717;
+  background-color: #ffc107
+}
+
+.fc-sheet--warning a {
+  color: #171717
+}
+
+.fc-sheet--danger {
+  color: #fff;
+  background-color: #dc3545
+}
+
+.fc-sheet--danger a {
+  color: #fff
+}
+
+.fc-sheet--light {
+  color: #171717;
+  background-color: #f3f3f3
+}
+
+.fc-sheet--light a {
+  color: #171717
+}
+
+.fc-sheet--dark {
+  color: #fff;
+  background-color: #242424
+}
+
+.fc-sheet--dark a {
+  color: #fff
+}
+
+.fc-sheet--muted {
+  color: #171717;
+  background-color: #e3e3e3
+}
+
+.fc-sheet--muted a {
+  color: #171717
+}
+
+.fc-sheet .fc-sheet__inner {
+  height: 100%
+}
+
+.fc-sheet--top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%)
+}
+
+@media (min-width:720px) {
+  .fc-sheet--top {
+    height: 70px
+  }
+}
+
+.fc-sheet--top.fc-sheet--in-view {
+  -webkit-transform: translateY(0);
+  transform: translateY(0)
+}
+
+@media (min-width:960px) {
+  .fc-sheet--top.fc-sheet--offset {
+    margin-left: 250px
+  }
+}
+
+.fc-sheet--bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 56px;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%)
+}
+
+.fc-sheet--bottom.fc-sheet--in-view {
+  -webkit-transform: translateY(0);
+  transform: translateY(0)
+}
+
+@media (min-width:960px) {
+  .fc-sheet--bottom.fc-sheet--offset {
+    margin-left: 250px
+  }
+  @supports (--sidebar-container-width:250px) {
+    .fc-sheet--bottom.fc-sheet--offset {
+      margin-left: var(--sidebar-container-width)
+    }
+  }
+}
+
+.fc-sheet--left {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 80%;
+  overflow: hidden;
+  overflow-y: auto;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  scrollbar-color: #656565 #232323;
+  scrollbar-face-color: #656565;
+  scrollbar-track-color: #232323;
+  scrollbar-arrow-color: #656565;
+  scrollbar-shadow-color: #232323;
+  scrollbar-color: #e3e3e3 #fff;
+  scrollbar-width: thin;
+  scrollbar-face-color: #e3e3e3;
+  scrollbar-track-color: #fff;
+  scrollbar-arrow-color: #e3e3e3;
+  scrollbar-shadow-color: #fff
+}
+
+.fc-sheet--left::-webkit-scrollbar-thumb {
+  background: #656565
+}
+
+.fc-sheet--left::-webkit-scrollbar-track {
+  background: #232323
+}
+
+@media (min-width:960px) {
+  .fc-sheet--left {
+    width: 250px
+  }
+}
+
+.fc-sheet--left.fc-sheet--in-view {
+  -webkit-transform: translate(0);
+  transform: translate(0)
+}
+
+.fc-sheet--left::-webkit-scrollbar {
+  width: 6px
+}
+
+.fc-sheet--left::-webkit-scrollbar-thumb {
+  background: #e3e3e3;
+  border-radius: .125rem
+}
+
+.fc-sheet--left::-webkit-scrollbar-track {
+  background: #fff
+}
+
+.fc-sheet--left.bg-dark {
+  scrollbar-color: #656565 #232323;
+  scrollbar-width: thin;
+  scrollbar-face-color: #656565;
+  scrollbar-track-color: #232323;
+  scrollbar-arrow-color: #656565;
+  scrollbar-shadow-color: #232323
+}
+
+.fc-sheet--left.bg-dark::-webkit-scrollbar {
+  width: 6px
+}
+
+.fc-sheet--left.bg-dark::-webkit-scrollbar-thumb {
+  background: #656565;
+  border-radius: .125rem
+}
+
+.fc-sheet--left.bg-dark::-webkit-scrollbar-track {
+  background: #232323
+}
+
+.fc-sheet--left.fc-sheet--clipped {
+  top: 60px;
+  height: calc(100% - 60px)
+}
+
+@media (min-width:960px) {
+  .fc-sheet--left.fc-sheet--clipped {
+    top: 70px;
+    height: calc(100% - 70px)
+  }
+}
+
+.fc-sheet--right {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 80%;
+  height: 100%;
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  overflow: hidden;
+  overflow-y: auto;
+  scrollbar-color: #e3e3e3 #fff;
+  scrollbar-width: thin;
+  scrollbar-face-color: #e3e3e3;
+  scrollbar-track-color: #fff;
+  scrollbar-arrow-color: #e3e3e3;
+  scrollbar-shadow-color: #fff
+}
+
+@media (min-width:960px) {
+  .fc-sheet--right {
+    width: 250px
+  }
+}
+
+.fc-sheet--right.fc-sheet--in-view {
+  -webkit-transform: translate(0);
+  transform: translate(0)
+}
+
+.fc-sheet--right::-webkit-scrollbar {
+  width: 6px
+}
+
+.fc-sheet--right::-webkit-scrollbar-thumb {
+  background: #e3e3e3;
+  border-radius: .125rem
+}
+
+.fc-sheet--right::-webkit-scrollbar-track {
+  background: #fff
+}
+
+.fc-sheet--right.bg-dark {
+  scrollbar-color: #656565 #232323;
+  scrollbar-width: thin;
+  scrollbar-face-color: #656565;
+  scrollbar-track-color: #232323;
+  scrollbar-arrow-color: #656565;
+  scrollbar-shadow-color: #232323
+}
+
+.fc-sheet--right.bg-dark::-webkit-scrollbar {
+  width: 6px
+}
+
+.fc-sheet--right.bg-dark::-webkit-scrollbar-thumb {
+  background: #656565;
+  border-radius: .125rem
+}
+
+.fc-sheet--right.bg-dark::-webkit-scrollbar-track {
+  background: #232323
+}
+
+.fc-sheet--right.fc-sheet--clipped {
+  top: 60px;
+  height: calc(100% - 60px)
+}
+
+@media (min-width:960px) {
+  .fc-sheet--right.fc-sheet--clipped {
+    top: 70px;
+    height: calc(100% - 70px)
+  }
+}
+
+.fc-sheet--center {
+  position: fixed;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  margin: auto;
+  -webkit-transition: -webkit-transform .0125s;
+  transition: -webkit-transform .0125s;
+  transition: transform .0125s;
+  transition: transform .0125s, -webkit-transform .0125s;
+  max-width: calc(100vw - 40px)
+}
+
+@media (max-width:719.98px) {
+  .fc-sheet--center {
+    max-width: calc(100vw - 30px);
+    max-height: calc(100vh - 30px)
+  }
+}
+
+.fc-sheet--center.fc-sheet--in-view {
+  -webkit-transform: translateY(calc(50vh - 50%));
+  transform: translateY(calc(50vh - 50%))
+}
+
+.fc-sheet__wrapper {
+  -webkit-transition: opacity .15s linear;
+  transition: opacity .15s linear
+}
+
+.fc-sheet__wrapper--overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .6);
+  z-index: 3002
 }
