--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -149,6 +149,6 @@ $utilities: (
 
 // temp
 
-// .fu-surface-bg {
-//   background: var(----surface-bg);
+// .fu-component-bg {
+//   background: var(----component-bg);
 // }
