feat: add table styles

--- a/src/assets/scss/ficus-docs.scss
+++ b/src/assets/scss/ficus-docs.scss
@@ -13,4 +13,5 @@
 @import 'sidebar';
 @import 'direct-link';
 @import 'table-of-contents';
-@import 'component-container'
+@import 'component-container';
+@import 'tables'
